--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -37,9 +37,13 @@ win_machine_build_task:
     - ps: wget https://netix.dl.sourceforge.net/project/lame/lame/3.100/lame-3.100.tar.gz
     - ps: tartool xf lame-3.100.tar.gz ./
     - cd lame-3.100
-    - ./configure --disable-decoder --disable-shared --enable-static
-    - make -j4
-    - make install
+    - ps: ((Get-Content -path .\Makefile.MSVC -Raw) -replace '/machine:I386','/machine:X64') | Set-Content -path .\Makefile.MSVC64 # Setup for x64
+    - ps: cp configMS.h config.h -Force
+    - ps: "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat -arch=amd64"
+    - ps: nmake -f Makefile.MSVC64 comp=msvc asm=yes /D
+    # - ./configure --disable-decoder --disable-shared --enable-static
+    # - make -j4
+    # - make install
 
   rtaudio_download_script:
     - ps: wget http://www.music.mcgill.ca/~gary/rtaudio/release/rtaudio-5.1.0.tar.gz
