--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -39,8 +39,8 @@ win_machine_build_task:
     - cd lame-3.100
     - ps: ((Get-Content -path .\Makefile.MSVC -Raw) -replace '/machine:I386','/machine:X64') | Set-Content -path .\Makefile.MSVC64 # Setup for x64
     - ps: cp configMS.h config.h -Force
-    - ps: "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat -arch=amd64"
-    - ps: nmake -f Makefile.MSVC64 comp=msvc asm=yes /D
+    - C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat -arch=amd64
+    - nmake -f Makefile.MSVC64 comp=msvc asm=yes /D
     # - ./configure --disable-decoder --disable-shared --enable-static
     # - make -j4
     # - make install
