--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -20,7 +20,7 @@ win_machine_build_task:
     - .\vcpkg install libsndfile libflac libvorbis libogg spdlog
 
   choco_script:
-    - cinst -y -r tartool make aria2 #visualstudio2017community cmake git
+    - cinst -y -r tartool make aria2 7zip #visualstudio2017community cmake git
 
   # nuget_install_script:
   #   - ps: "[Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12"
@@ -34,11 +34,11 @@ win_machine_build_task:
   #   - ps: Install-Package spdlog.native
 
   lame_download_script:
-    - ps: aria2c https://netix.dl.sourceforge.net/project/lame/lame/3.100/lame-3.100.tar.gz
-    - ps: tartool lame-3.100.tar.gz ./
+    - aria2c https://netix.dl.sourceforge.net/project/lame/lame/3.100/lame-3.100.tar.gz
+    - 7z x lame-3.100.tar.gz
     - cd lame-3.100
     - ps: ((Get-Content -path .\Makefile.MSVC -Raw) -replace '/machine:I386','/machine:X64') | Set-Content -path .\Makefile.MSVC64 # Setup for x64
-    - ps: cp configMS.h config.h -Force
+    - cp configMS.h config.h -Force
     - C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat -arch=amd64
     - nmake -f Makefile.MSVC64 comp=msvc asm=yes /D
     # - ./configure --disable-decoder --disable-shared --enable-static
@@ -46,8 +46,8 @@ win_machine_build_task:
     # - make install
 
   rtaudio_download_script:
-    - ps: aria2c http://www.music.mcgill.ca/~gary/rtaudio/release/rtaudio-5.1.0.tar.gz
-    - ps: tartool rtaudio-5.1.0.tar.gz ./
+    - aria2c http://www.music.mcgill.ca/~gary/rtaudio/release/rtaudio-5.1.0.tar.gz
+    - 7z x rtaudio-5.1.0.tar.gz
     - cd rtaudio-5.1.0
     - mkdir -p __build && cd __build
     - cmake .. -DCMAKE_TOOLCHAIN_FILE=..\vcpkg\scripts\buildsystems\vcpkg.cmake
