--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -40,8 +40,6 @@ win_machine_build_task:
     - set VSCMD_DEBUG=1
     - '"C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\VsDevCmd.bat" -arch=%BITNESS%'
     - nmake -f Makefile.MSVC%BITNESS% comp=msvc asm=no DLL /D
-    - dir output
-    - dir ..
     - copy output\libmp3lame.dll ..\chronicle
     - del output /S /Q # Remove the generated files, so they aren't cached
 
@@ -65,7 +63,8 @@ win_machine_build_task:
   build_script:
     - mkdir -p __build
     - cd __build
-    - cmake .. -DCMAKE_TOOLCHAIN_FILE=..\vcpkg\scripts\buildsystems\vcpkg.cmake -DVCPKG_TARGET_TRIPLET=%BITNESS%-windows
+    - IF "%BITNESS%"=="x64" (set GENERATOR_STRING="Visual Studio 15 2017 Win64") ELSE (set GENERATOR_STRING="Visual Studio 15 2017")
+    - cmake -G "%GENERATOR_STRING%" .. -DCMAKE_TOOLCHAIN_FILE=..\vcpkg\scripts\buildsystems\vcpkg.cmake -DVCPKG_TARGET_TRIPLET=%BITNESS%-windows
     - cmake --build . -v
 
   package_artifacts:
