--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -56,8 +56,8 @@ win_machine_build_task:
     - cd rtaudio-5.1.0
     - mkdir -p __build && cd __build
     - cmake -G "%GENERATOR_STRING%" .. -DCMAKE_TOOLCHAIN_FILE=..\vcpkg\scripts\buildsystems\vcpkg.cmake -DVCPKG_TARGET_TRIPLET=%BITNESS%-windows --debug-output
-    - cmake --build -v .
-    - cmake --install -v .
+    - cmake --build . -v
+    - cmake --install . -v
     - cd ..
     - del __build /S /Q # Remove the generated files, so they aren't cached
 
@@ -66,7 +66,7 @@ win_machine_build_task:
     - cd __build
     # - IF "%BITNESS%"=="x64" (set GENERATOR_STRING="Visual Studio 15 2017 Win64") ELSE (set GENERATOR_STRING="Visual Studio 15 2017")
     - cmake -G "%GENERATOR_STRING%" .. -DCMAKE_TOOLCHAIN_FILE=..\vcpkg\scripts\buildsystems\vcpkg.cmake -DVCPKG_TARGET_TRIPLET=%BITNESS%-windows --debug-output
-    - cmake --build -v .
+    - cmake --build . -v
 
   package_artifacts:
     path: __build
