--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -57,7 +57,7 @@ win_machine_build_task:
     - mkdir -p __build && cd __build
     - cmake -G "%GENERATOR_STRING%" .. -DCMAKE_TOOLCHAIN_FILE=..\vcpkg\scripts\buildsystems\vcpkg.cmake -DVCPKG_TARGET_TRIPLET=%BITNESS%-windows --debug-output
     - cmake --build . -v
-    - cmake --install . -v
+    - cmake --install .
     - cd ..
     - del __build /S /Q # Remove the generated files, so they aren't cached
 
