--- a/.ci/Dockerfile
+++ b/.ci/Dockerfile
@@ -4,7 +4,8 @@ RUN choco upgrade -y visualstudio2017community visualstudio2017-workload-vctools
 RUN choco install -y visualstudio2017-workload-nativedesktop
 RUN cinst -y -r make aria2 7zip
 
-WORKDIR C:\\
+WORKDIR C:\\ 
+#try trailing slash+space
 
 RUN git clone https://github.com/Microsoft/vcpkg.git
 RUN powershell -Command {cd vcpkg; .\bootstrap-vcpkg.bat; .\vcpkg integrate install}
