Use msvc release config

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -65,7 +65,7 @@ win_machine_build_task:
     - cd rtaudio-5.1.0
     - mkdir -p __build && cd __build
     - cmake -G "%GENERATOR_STRING%" .. -DCMAKE_TOOLCHAIN_FILE=C:\vcpkg\scripts\buildsystems\vcpkg.cmake -DVCPKG_TARGET_TRIPLET=%BITNESS%-windows --debug-output
-    - cmake --build . -v -DCMAKE_BUILD_TYPE=Release
+    - cmake --build . -v --config Release
     - cmake --install .
     - cd ..
     - del __build /S /Q # Remove the generated files, so they aren't cached
@@ -75,7 +75,7 @@ win_machine_build_task:
     - cd __build
     # - IF "%BITNESS%"=="x64" (set GENERATOR_STRING="Visual Studio 15 2017 Win64") ELSE (set GENERATOR_STRING="Visual Studio 15 2017")
     - cmake -G "%GENERATOR_STRING%" .. -DCMAKE_TOOLCHAIN_FILE=C:\vcpkg\scripts\buildsystems\vcpkg.cmake -DVCPKG_TARGET_TRIPLET=%BITNESS%-windows --debug-output
-    - cmake --build . -v
+    - cmake --build . -v --config Release
 
   package_artifacts:
     path: __build
