--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,11 +42,11 @@ find_library(LAME_LIB
 NAMES libmp3lame libmp3lame.a libmp3lame-static.lib libmp3lame.dll libmp3lame.lib lame_enc lame_enc.dll lame_enc.lib
 HINTS "./lib/" "../lib/") # For the Windows build - lib files are placed in the SOURCE/lib dir
 
-#if (LAME_LIB OR lame_FOUND)
-#    message(STATUS "Found LAME: ${LAME_LIB}")
-#else()
-#    message(FATAL_ERROR "Could not find lame! Exiting...")
-#endif()
+if (LAME_LIB OR lame_FOUND)
+    message(STATUS "Found LAME: ${LAME_LIB}")
+else()
+    message(FATAL_ERROR "Could not find lame! Exiting...")
+endif()
 
 ##############
 # LIBSNDFILE #
